when $enableAdvancedConfig is set in config.php.

Fixed bug that would not allow a disk to be set to Multi-attach.

Fixed bug with PHP versions < 5.2 that would not enable network
cards of VMs when saving VM settings.
http://code.google.com/p/phpvirtualbox/issues/detail?id=333

Added $enableAppTabSupport configuration option and feature. See
config.php-example for more information.

-------------------------------------
	4.1-0	2011-7-19
-------------------------------------
VirtualBox 4.1.x compatibility.

jquery upgrade to 1.6.2.

Fixed issue where exported disks would be incorrectly named when
exporting a virtual machine.
http://code.google.com/p/phpvirtualbox/issues/detail?id=307

UI updates for wizards.

Most translations are now taken from the VirtualBox source .qt
files.

-------------------------------------
	4.0-7	2011-6-8
-------------------------------------
Removed $sessionSecurityLevel setting and associated logic as it
really provided no extra session security.

Fixed session bug where another client running the same browser
from the same subnet could inherit another user's session.
http://code.google.com/p/phpvirtualbox/issues/detail?id=295

Fixed bug that would not allow you to edit more than one host-only
networking adapter.
http://code.google.com/p/phpvirtualbox/issues/detail?id=310

Added $consoleKeyboardLayout setting.
http://code.google.com/p/phpvirtualbox/issues/detail?id=248

-------------------------------------
	4.0-6	2011-5-24
-------------------------------------
Pressing Esc key now closes most dialog boxes.
http://code.google.com/p/phpvirtualbox/issues/detail?id=237

File / folder browser no longer shows "Access Denied" message
when $restrictFolders is configured.
http://code.google.com/p/phpvirtualbox/issues/detail?id=238

Hard disks that are already attached to a VM are not elected to
be attached when adding a Hard Disk attachment in VM settings.
http://code.google.com/p/phpvirtualbox/issues/detail?id=239
