@@ -43,15 +43,20 @@
 	
 	<span class='translate'>&lt;p&gt;A &lt;b&gt;fixed size&lt;/b&gt; virtual disk file may take longer to create on some systems but is often faster to use.&lt;/p&gt;</span>
 	
+	<span class='translate' id='vboxHDSplitOptionLabel'>&lt;p&gt;You can also choose to &lt;b&gt;split&lt;/b&gt; the virtual disk into several files of up to two gigabytes each. This is mainly useful if you wish to store the virtual machine on removable USB devices or old systems, some of which cannot handle very large files.</span>
+	
 	<span class='vboxTableLabel translatevar'>Storage details</span>
 	<div class='vboxBordered'>
 		<table class='vboxOptions'>
 			<tr style='vertical-align: top;'>
-				<td><label><input type='radio' class='vboxRadio' checked='checked' name='newHardDiskType' value='dynamic' /><span class='translate'>Dynamically allocated</span></label></td>
+				<td><label><input type='radio' class='vboxRadio' checked='checked' name='newHardDiskType' value='dynamic' /> <span class='translate'>Dynamically allocated</span></label></td>
 			</tr>
 			<tr style='vertical-align: top;'>
-				<td><label><input type='radio' class='vboxRadio' name='newHardDiskType' value='fixed' /><span class='translate'>Fixed size</span></label></td>
-			</tr>	
+				<td><label><input type='radio' class='vboxRadio' name='newHardDiskType' value='fixed' /> <span class='translate'>Fixed size</span></label></td>
+			</tr>
+			<tr id='vboxHDSplitOption' style='vertical-align: top;'>
+				<td><label><input type='checkbox' class='vboxCheckbox' name='newHardDiskSplit' /> <span class='translate'>Split into files of less than 2GB</span></label></td>
+			</tr>					
 		</table>
 	</div>
 
@@ -110,7 +115,11 @@
 	<div style='padding: 4px; margin: 2px;' class='vboxBordered'>
 		<table class='vboxVertical' style='padding: 4px;'>
 			<tr>
-				<th style='text-align: right'><span class='translate'>Type</span>:</th>
+				<th style='text-align: right'><span class='translate'>File type</span>:</th>
+				<td id='wizardNewHDFileTypeLabel'>Dasdf</td>
+			</tr>		
+			<tr>
+				<th style='text-align: right'><span class='translate'>Details</span>:</th>
 				<td id='wizardNewHDTypeLabel'>Dynamically expanding storage</td>
 			</tr>
 			<tr>
@@ -139,7 +148,7 @@ $('#wizNewHDStep4Sum').html(trans('If the above settings are correct, press the 
 function wizardHDBrowseLocation() {
 
 	// Get current location
-	var loc = document.forms['frmwizardNewHD'].elements.wizardNewHDLocation.value;
+	var loc = $('<div />').html(document.forms['frmwizardNewHD'].elements.wizardNewHDLocation.value).text();
 	var os = null;
 	if(loc.indexOf(':') > 0) {
 		// windows
@@ -162,6 +171,27 @@ function wizardHDBrowseLocation() {
 	},true,trans('Location','UINewHDWizard'));
 
 }
+
+/* WHen showing step 2, show / hide split option */
+$('#wizardNewHDStep2').bind('show',function(e,wiz){
+	
+	if((document.forms['frmwizardNewHD'].newHardDiskFileType[0].checked)) {
+		$('#vboxHDSplitOptionLabel').hide();
+		$('#vboxHDSplitOption').hide();
+		ext = 'vdi';
+	} else if(document.forms['frmwizardNewHD'].newHardDiskFileType[1].checked) {
+		$('#vboxHDSplitOptionLabel').show();
+		$('#vboxHDSplitOption').show();
+		ext = 'vmdk';
+	} else {
+		$('#vboxHDSplitOptionLabel').hide();
+		$('#vboxHDSplitOption').hide();
+		ext = 'vhd';
+	}
+	
+	vboxWizardNewHDElectName(ext);
+	
+});
 /* When showing summary */
 $('#wizardNewHDStep4').bind('show',function(e,wiz){
 		
@@ -174,8 +204,7 @@ $('#wizardNewHDStep4').bind('show',function(e,wiz){
 		else
 			loc = $('#vboxIndex').data('vboxSystemProperties').homeFolder + $('#vboxIndex').data('vboxConfig').DSEP + loc;
 	}
-	document.forms['frmwizardNewHD'].elements.wizardNewHDLocation.value = loc;
-	$('#wizardNewHDLocationLabel').html($('<div />').text(loc).html());
+	$('#wizardNewHDLocationLabel').html(loc);
 	
 	/* Check to see if file exists */
 	var fileExists = false;
@@ -192,29 +221,53 @@ $('#wizardNewHDStep4').bind('show',function(e,wiz){
 	}
 	l.run();
 
+	// File type
+	var t = 'VDI (VirtualBox Disk Image)';
+	var ext = '.vdi';
+	if(document.forms['frmwizardNewHD'].newHardDiskFileType[1].checked) {
+		t = 'VMDK (Virtual Machine Disk)';
+		if(document.forms['frmwizardNewHD'].newHardDiskSplit.checked) {
+			$('#wizardNewHDTypeLabel').html((document.forms['frmwizardNewHD'].elements.newHardDiskType[1].checked ? trans('Fixed size storage split into files of less than 2GB','VBoxGlobal') : trans('Dynamically allocated storage split into files of less than 2GB','VBoxGlobal')));
+		}
+		ext = '.vmdk';
+	} else if(document.forms['frmwizardNewHD'].newHardDiskFileType[2].checked) {
+		t = 'VHD (Virtual Hard Disk)';
+		ext = '.vhd';
+	}
+	$('#wizardNewHDFileTypeLabel').html(trans(t,'UINewHDWizard'));
+	
+	// Add extension?
+	if(loc.search(/\.[a-zA-Z]+$/) < 0) $('#wizardNewHDLocationLabel').html(loc+ext);
+
 	// Fix size if we need to
 	var mbytes = vboxConvertMbytes(document.forms['frmwizardNewHD'].elements.wizardNewHDSizeValue.value);
 	document.forms['frmwizardNewHD'].elements.wizardNewHDSizeValue.value = vboxMbytesConvert(mbytes);
 	$('#wizardNewHDSizeLabel').html(document.forms['frmwizardNewHD'].elements.wizardNewHDSizeValue.value + ' ('+mbytes+' '+trans('MB','VBoxGlobal')+')');
 });
 
-/* Go through list of media and pick new hd name */
-var HDname = 'NewHardDisk99';
-for(var a = 1; a < 99; a++) {
-	var found = 0;
-	for(var i = 0; i < $('#vboxIndex').data('vboxMedia').length; i++) {
-		if($('#vboxIndex').data('vboxMedia')[i].name == 'NewHardDisk'+a+'.vdi') {
-			i = $('#vboxIndex').data('vboxMedia').length;
-			var found = 1;
+function vboxWizardNewHDElectName(ext) {
+	
+	if(!ext) ext = 'vdi';
+	
+	/* Go through list of media and pick new hd name */
+	var HDname = 'NewHardDisk99';
+	for(var a = 1; a < 99; a++) {
+		var found = 0;
+		for(var i = 0; i < $('#vboxIndex').data('vboxMedia').length; i++) {
+			if($('#vboxIndex').data('vboxMedia')[i].name == 'NewHardDisk'+a+'.'+ext) {
+				i = $('#vboxIndex').data('vboxMedia').length;
+				var found = 1;
+			}
+		}
+		if(!found) {
+			HDname = 'NewHardDisk'+a;
+			a = 100;
 		}
 	}
-	if(!found) {
-		HDname = 'NewHardDisk'+a+'.vdi';
-		a = 100;
-	}
-}
 
-document.forms['frmwizardNewHD'].elements.wizardNewHDLocation.value = HDname;
+	document.forms['frmwizardNewHD'].elements.wizardNewHDLocation.value = HDname;
+	
+}
 
 /* Size slider */
 var min = 1024;
